static/css/main.css
body {
	margin: 0;
	padding: 0;
	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
	color: #444;
}

/*
 * Create dark grey header with a white logo
 */

header {
	background-color: #2B2B2B;
	height: 35px;
	width: 100%;
	opacity: .9;
	margin-bottom: 10px;
}

header h1.logo {
	margin: 0;
	font-size: 1.7em;
	color: #fff;
	text-transform: uppercase;
	float: left;
}

header h1.logo:hover {
	color: #fff;
	text-decoration: none;
}

/*
 * Center the body content
 */

.container {
	width: 600px;
	margin: 0 auto;
	padding-bottom: 10px;
}

div.jumbo {
	padding: 10px 0 30px 0;
	background-color: #eeeeee;
	-webkit-border-radius: 6px;
	   -moz-border-radius: 6px;
	        border-radius: 6px;
}

h2 {
	font-size: 3em;
	margin-top: 40px;
	text-align: center;
	letter-spacing: -2px;
}

h3 {
	font-size: 1.7em;
	font-weight: 100;
	margin-top: 30px;
	text-align: center;
	letter-spacing: -1px;
	color: #999;
}

/*
 * Display navigation links inline
 */

.menu {
	float: right;
	margin-top: 8px;
}

.menu li {
	display: inline;
}

.menu li + li {
	margin-left: 35px;
}

.menu li a {
	color: #999;
	text-decoration: none;
}

/* Contact form */
form label {
	font-size: 1.2em;
	font-weight: bold;
	display: block;
	padding: 10px 0;
}

form input#name,
form input#email,
form input#subject {
	width: 400px;
	background-color: #fafafa;
	-webkit-border-radius: 3px;
	   -moz-border-radius: 3px;
	        border-radius: 3px;
	border: 1px solid #cccccc;
	padding: 5px;
	font-size: 1.1em;
}

form textarea#message {
	width: 500px;
	height: 100px;
	background-color: #fafafa;
	-webkit-border-radius: 3px;
	   -moz-border-radius: 3px;
	        border-radius: 3px;
	border: 1px solid #cccccc;
	margin-bottom: 10px;
	padding: 5px;
	font-size: 1.1em;
}

form input#submit {
	display: block;
	-webkit-border-radius: 3px;
       -moz-border-radius: 3px;
            border-radius: 3px;
  	border:1px solid #d8d8d8;  
  	padding: 10px;
  	font-weight:bold;
  	text-align: center;
  	color: #000000;
  	background-color: #f4f4f4;
	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #f4f4f4), color-stop(100%, #e5e5e5));
	background-image: -webkit-linear-gradient(top, #f4f4f4, #e5e5e5);
	background-image: -moz-linear-gradient(top, #f4f4f4, #e5e5e5);
	background-image: -ms-linear-gradient(top, #f4f4f4, #e5e5e5);
	background-image: -o-linear-gradient(top, #f4f4f4, #e5e5e5);
	background-image: linear-gradient(top, #f4f4f4, #e5e5e5);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#f4f4f4, endColorstr=#e5e5e5);
}
 
form input#submit:hover{
	cursor: pointer;
	border:1px solid #c1c1c1;
	background-color: #dbdbdb;
	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#dbdbdb), color-stop(100%, #cccccc));
	background-image: -webkit-linear-gradient(top, #dbdbdb, #cccccc);
	background-image: -moz-linear-gradient(top, #dbdbdb, #cccccc);
	background-image: -ms-linear-gradient(top, #dbdbdb, #cccccc);
	background-image: -o-linear-gradient(top, #dbdbdb, #cccccc);
	background-image: linear-gradient(top, #dbdbdb, #cccccc);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#dbdbdb, endColorstr=#cccccc);
}

/* Message flashing */
.flash {
	background-color: #FBB0B0;
	padding: 10px;
	width: 200px;
}

